change prefLabel to altLabel on document types

--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -145,7 +145,7 @@
           data-test-details-tab-document-type
           @key={{t "document-type"}}
         >
-          {{this.documentType.label}}
+          {{this.documentType.altLabel}}
         </Auk::KeyValue>
       {{/if}}
       <Auk::KeyValue data-test-details-tab-name @key={{t "document-name"}}>
