--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -19,7 +19,7 @@
             <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
               <span data-test-document-card-type class="auk-overline">
                 {{#unless this.loadPieceRelatedData.isRunning}}
-                  {{this.documentContainer.type.label}}
+                  {{this.documentContainer.type.altLabel}}
                 {{/unless}}
               </span>
             </div>
