--- a/app/components/documents/document-version-history-item.hbs
+++ b/app/components/documents/document-version-history-item.hbs
@@ -34,7 +34,7 @@
   <div class="vlc-document-card-item__meta au-u-muted">
     {{!-- no piece.created in legacy data --}}
     {{#if @piece.created}}
-      {{t "added-at"}}
+      {{t "uploaded-at"}}
       {{datetime-at @piece.created}}
     {{/if}}
   </div>
