--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -55,6 +55,18 @@
                   {{/if}}
                 </p>
               {{/if}}
+              {{#if this.piece.signedPiece.file}}
+                <p>
+                  <AuLinkExternal
+                    href={{await this.piece.signedPiece.namedDownloadLinkPromise}}
+                    download
+                  >
+                    {{t "signed-document"}}
+                  </AuLinkExternal>
+                  {{t "on"}}
+                  {{datetime-at this.piece.signedPiece.created}}
+                </p>
+              {{/if}}
             </div>
           </Group.Item>
         </Toolbar.Group>
