--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -2,7 +2,10 @@
   {{#if this.loadSignatureRelatedData.isRunning}}
     <Auk::Loader />
   {{else if this.signMarkingActivity}}
-    <SignaturePill @signMarkingActivity={{this.signMarkingActivity}}/>
+    <SignaturePill
+      @piece={{@piece}}
+      @signMarkingActivity={{this.signMarkingActivity}}
+    />
   {{else if this.agendaitem}}
     <p class="au-u-muted auk-u-mt-2">
       {{or @piece.documentContainer.type.label (t "no-document-type")}}
