--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -1,27 +1,21 @@
 {{#if this.loadData.isRunning}}
   <div class="auk-loader" role="alert" aria-busy="true"></div>
-{{else if this.isRefused}}
-  <AuPill @icon="sign" @skin="error">
-    {{t "refused"}}
-  </AuPill>
-{{else if this.isSigned}}
-  <AuPill @icon="sign" @skin="link">
-    {{t "signed"}}
-  </AuPill>
-{{else if this.hasToBeSigned}}
-  <AuPill @icon="sign" @skin="link">
-    {{t "to-sign"}}
-  </AuPill>
-{{else if this.hasToBeApproved}}
-  <AuPill @icon="sign" @skin="link">
-    {{t "to-approve"}}
-  </AuPill>
-{{else if this.isPrepared}}
-  <AuPill @icon="sign" @skin="link">
-    {{t "sent"}}
-  </AuPill>
-{{else if this.isMarked}}
-  <AuPill @icon="sign" @skin="link">
-    {{t "to-sign"}}
-  </AuPill>
+{{else}}
+  {{#if this.signingHubUrl}}
+    <AuPill
+      @icon="sign"
+      @skin={{this.skin}}
+      @href={{this.signingHubUrl}}
+      target="_blank"
+    >
+      {{this.title}}
+    </AuPill>
+  {{else}}
+    <AuPill
+      @icon="sign"
+      @skin={{this.skin}}
+    >
+      {{this.title}}
+    </AuPill>
+  {{/if}}
 {{/if}}
