--- a/app/components/search/result-cards/case.hbs
+++ b/app/components/search/result-cards/case.hbs
@@ -16,7 +16,7 @@
         <AuPill @size="small" @skin="border">{{t "deleted-case"}}</AuPill>
       {{/if}}
     </div>
-    <AuHeading @level="3" @skin="6">
+    <AuHeading @level="3" @skin="6" class="au-u-margin-top-tiny">
       <AuLink
         data-test-route-search-result-cards-case-shorttitle
         class="au-u-padding-none card-link"
@@ -32,11 +32,11 @@
       </AuLink>
     </AuHeading>
   </card.header>
-  <card.content>
-    {{#if @subcaseHighlights}}
+  {{#if @subcaseHighlights}}
+    <card.footer>
       <p
         data-test-route-search-result-cards-case-found-subcases
-        class="au-u-para-small au-u-margin-top-small au-u-muted"
+        class="au-u-para-small au-u-muted"
       >
         {{t "found-inside"}}
         <span class="au-u-muted au-u-medium">
@@ -52,6 +52,6 @@
           {{t "and-n-other-subcases" n=(sub @subcaseHighlights.length 1)}}
         {{/if}}
       </p>
-    {{/if}}
-  </card.content>
+    </card.footer>
+  {{/if}}
 </AuCard>
