feat: add notulen route

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -20,4 +20,7 @@
   <Auk::Tab @route="agenda.documents">
     {{t "documents"}}
   </Auk::Tab>
+  <Auk::Tab @route="agenda.notes">
+    {{t "notes"}}
+  </Auk::Tab>
 </Auk::Tabs>
