KAS-4020 PR group review

--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -14,7 +14,7 @@
                 />
               </th>
             {{/if}}
-            <th>{{t "document-name"}}</th>
+            <th>{{t "name-document"}}</th>
             <th>{{t "document-type"}}</th>
             {{#if (user-may "manage-documents")}}
               <th>{{t "publicity"}}</th>
