--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -8,7 +8,7 @@
   {{#if @allowDocumentContainerEdit}}
     <div data-test-uploaded-document-container class="metadata-container">
       <div class="auk-form-group">
-        <Auk::Label>{{t "document-name"}}</Auk::Label>
+        <Auk::Label>{{t "name-document"}}</Auk::Label>
         <AuInput
           data-test-uploaded-document-name-input={{true}}
           @width="block"
