--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -23,7 +23,7 @@
           @renderInPlace={{true}}
         />
       </Auk::KeyValue>
-      <Auk::KeyValue data-test-details-tab-name @key={{t "document-name"}}>
+      <Auk::KeyValue data-test-details-tab-name @key={{t "name-document"}}>
         <Textarea
           data-test-details-tab-edit-name
           aria-labelledby="piece-name"
@@ -148,7 +148,7 @@
           {{this.documentType.label}}
         </Auk::KeyValue>
       {{/if}}
-      <Auk::KeyValue data-test-details-tab-name @key={{t "document-name"}}>
+      <Auk::KeyValue data-test-details-tab-name @key={{t "name-document"}}>
         {{#let (or @piece.file.derived.extension @piece.file.extension) as |extension|}}
           {{@piece.name}}.{{extension}}
         {{/let}}
