feat: add template from usertest

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -21,6 +21,6 @@
     {{t "documents"}}
   </Auk::Tab>
   <Auk::Tab @route="agenda.notes">
-    {{t "notes"}}
+    {{t "minutes"}}
   </Auk::Tab>
 </Auk::Tabs>
