--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -20,7 +20,7 @@
   <Auk::Tab @route="agenda.documents">
     {{t "documents"}}
   </Auk::Tab>
-  <Auk::Tab @route="agenda.notes">
+  <Auk::Tab @route="agenda.minutes">
     {{t "minutes"}}
   </Auk::Tab>
 </Auk::Tabs>
