KAS-4039 Fix faulty content styling (part 2)

--- a/app/components/search/result-cards/news-item.hbs
+++ b/app/components/search/result-cards/news-item.hbs
@@ -28,13 +28,11 @@
     </AuHeading>
   </c.header>
   {{#if @text}}
-    <c.content>
-      <p data-test-route-search-result-cards-news-item-text>
-        <SanitizeHtml
-          @raw={{true}}
-          @value={{@text}}
-        />
-      </p>
+    <c.content data-test-route-search-result-cards-news-item-text>
+      <SanitizeHtml
+        @raw={{true}}
+        @value={{@text}}
+      />
     </c.content>
   {{/if}}
   <c.footer>
