--- a/app/styles/au/_au-base.scss
+++ b/app/styles/au/_au-base.scss
@@ -2,9 +2,26 @@
    ========================================================================== */
 
 // Imports
-// sourced from "@appuniversum/ember-appuniversum" npm package
+// sourced from '@appuniversum/ember-appuniversum' npm package
 
 @import 'ember-appuniversum/a-settings';
 @import 'ember-appuniversum/a-tools';
-@import "ember-appuniversum/a-objects";
-@import 'ember-appuniversum/a-utilities';
+@import 'ember-appuniversum/a-objects';
+
+// @import 'ember-appuniversum/a-utilities'; // REMARK: disabled for now (with individual imports below) as u-print breaks print styling (color & background-color) within Kaleidos
+
+@import 'ember-appuniversum/u-align-text';
+@import 'ember-appuniversum/u-background';
+@import 'ember-appuniversum/u-break-word';
+@import 'ember-appuniversum/u-headings';
+@import 'ember-appuniversum/u-hide';
+@import 'ember-appuniversum/u-flex';
+@import 'ember-appuniversum/u-font-family';
+@import 'ember-appuniversum/u-font-weights';
+@import 'ember-appuniversum/u-max-widths';
+@import 'ember-appuniversum/u-paragraphs';
+// @import 'ember-appuniversum/u-print';
+@import 'ember-appuniversum/u-responsive-spacings';
+@import 'ember-appuniversum/u-spacings';
+@import 'ember-appuniversum/u-visible';
+@import 'ember-appuniversum/u-widths';
