--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -186,95 +186,11 @@
           class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
         >
           {{#if this.isEditing}}
-            <div
-              class="auk-rdfa-holder
-                {{if
-                  this.isFullscreen
-                  'auk-rdfa-fullscreen au-u-margin-top-none'
-                }}"
-            >
-              <div
-                class="auk-rdfa-holder__header au-u-flex au-u-flex--between au-u-flex--vertical-center"
-              >
-                {{#if this.isFullscreen}}
-                  <div
-                    class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center"
-                  >
-                    <h4 class="auk-toolbar__title">
-                      Notulen
-                    </h4>
-                    <AuButton @skin="link" @icon="renew">Inhoud updaten</AuButton>
-                    <AuDropdown
-                      @title="Huidige versie"
-                      @alignment="left"
-                      @skin="naked"
-                      @icon="chevron-down"
-                      @iconAlignment="right"
-                    >
-                      <AuButton @skin="link-secondary" role="menuitem">
-                        Versie van 18-11-2022 om 10:23
-                      </AuButton>
-                      <AuButton @skin="link-secondary" role="menuitem">
-                        Versie van 13-11-2022 om 12:13
-                      </AuButton>
-                    </AuDropdown>
-                  </div>
-                  <AuButtonGroup>
-                    <AuButton
-                      @skin="naked"
-                      @icon="minimize"
-                      @iconAlignment="left"
-                      {{!-- {{on "click" this.toggleFullscreen}} --}}
-                    >
-                      {{t "close-fullscreen"}}
-                    </AuButton>
-                    <AuButton
-                      @skin="primary"
-                      @loading={{this.saveMinutes.isRunning}}
-                      {{on "click" (perform this.saveMinutes)}}
-                    >
-                      {{t "save"}}
-                    </AuButton>
-                  </AuButtonGroup>
-                {{else}}
-                  <div
-                    class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center"
-                  >
-                    <AuButton
-                      @skin="link"
-                      @icon="renew"
-                      class="au-u-padding-left-none"
-                    >Inhoud updaten</AuButton>
-                    <AuDropdown
-                      @title="Huidige versie"
-                      @alignment="left"
-                      @skin="naked"
-                      @icon="chevron-down"
-                      @iconAlignment="right"
-                    >
-                      <AuButton @skin="link-secondary" role="menuitem">
-                        Versie van 18-11-2022 om 10:23
-                      </AuButton>
-                      <AuButton @skin="link-secondary" role="menuitem">
-                        Versie van 13-11-2022 om 12:13
-                      </AuButton>
-                    </AuDropdown>
-                  </div>
-                  <AuButton
-                    @skin="naked"
-                    @icon="expand"
-                    @iconAlignment="left"
-                    {{!-- {{on "click" this.toggleFullscreen}} --}}
-                  >
-                    {{t "fullscreen"}}
-                  </AuButton>
-                {{/if}}
-              </div>
-              <WebComponents::VlRdfaEditor
-                data-test-newsletter-edit-item-rdfa-editor
-                @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
-              />
-            </div>
+            <SayEditor
+              @showSave={{true}}
+              @showUpdateContent={{true}}
+              @showVersioning={{true}}
+            />
           {{else}}
             {{#if @model}}
               <div class="au-c-content au-c-content--small">
