fix: remove padding on old layout

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -105,7 +105,7 @@
       </Auk::Panel::Body>
     {{else}}
       {{#if (and this.report.file (not this.report.pieceParts))}}
-        <Auk::Panel::Body class="au-o-flow">
+        <Auk::Panel::Body class="au-o-flow" @noPadding={{true}}>
           <Documents::DocumentCard
             @piece={{this.report}}
             @isEditable={{true}}
