fix: add parameter to upload report

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -139,6 +139,7 @@
             @hideNewerVersions={{true}}
             @onOpenUploadModal={{@onOpenUploadModal}}
             @onAddPiece={{this.attachNewReportVersionAsPiece}}
+            @pieceSubtype="report"
             @didDeleteContainer={{perform this.loadReport}}
             @bordered={{false}}
           />
