--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -55,17 +55,19 @@
                   {{/if}}
                 </p>
               {{/if}}
-              {{#if this.piece.signedPiece.file}}
-                <p>
-                  <AuLinkExternal
-                    href={{await this.piece.signedPiece.namedDownloadLinkPromise}}
-                    download
-                  >
-                    {{t "signed-document"}}
-                  </AuLinkExternal>
-                  {{t "on"}}
-                  {{datetime-at this.piece.signedPiece.created}}
-                </p>
+              {{#if (and this.signaturesEnabled (await (this.canViewSignedPiece)))}}
+                {{#if this.piece.signedPiece.file}}
+                  <p>
+                    <AuLinkExternal
+                      href={{await this.piece.signedPiece.namedDownloadLinkPromise}}
+                      download
+                    >
+                      {{t "signed-document"}}
+                    </AuLinkExternal>
+                    {{t "on"}}
+                    {{datetime-at this.piece.signedPiece.created}}
+                  </p>
+                {{/if}}
               {{/if}}
             </div>
           </Group.Item>
