--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -7,9 +7,9 @@
       @signMarkingActivity={{this.signMarkingActivity}}
     />
   {{else if this.agendaitem}}
-    {{#if this.loadCanCreateSignFlow.isRunning}}
+    {{#if this.loadCanManageSignFlow.isRunning}}
       <Auk::Loader />
-    {{else if this.canCreateSignFlow}}
+    {{else if this.canManageSignFlow}}
       <p class="au-u-muted auk-u-mt-2">
         {{or @piece.documentContainer.type.label (t "no-document-type")}}
         -
