add access-level-pill to document-preview-modal for signed piece

--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -188,8 +188,12 @@
             @iconAlignment="left"
             download
           >
-            {{@piece.signedPiece.name}}.{{@piece.signedPiece.file.extension}}
+            {{@piece.signedPiece.name}}.{{@piece.signedPiece.file.extension}} 
           </AuLinkExternal>
+            <AccessLevelPill 
+              @accessLevel={{await @piece.signedPiece.accessLevel}} 
+              @isEditable={{false}}
+            />
         </Auk::KeyValue>
       {{/if}}
     </Auk::Panel::Body>
