--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -166,7 +166,7 @@
       {{/if}}
     {{/if}}
   {{else}}
-    <Auk::Panel::Body class="au-o-flow">
+    <Auk::Panel::Body class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}">
       <Auk::Loader />
     </Auk::Panel::Body>
   {{/if}}
