fix: email does not use inputmask anymore

--- a/app/components/signatures/email-modal.hbs
+++ b/app/components/signatures/email-modal.hbs
@@ -7,8 +7,7 @@
     <div class="auk-form-group">
       <AuLabel>{{t "email-address"}}</AuLabel>
       <AuInput
-        @onChange={{fn (mut this.emailBuffer)}}
-        @maskOptions={{this.inputmaskOptions}}
+        {{on "input" this.onInputEvent}}
         @warning={{and this.emailBuffer (not this.isValid)}}
         @type="text"
         @width="block"
