added two more altLabels

--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -9,7 +9,7 @@
           <Group.Item class="auk-u-maximize-width">
             <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
               <span class="auk-overline">
-                {{@documentContainer.type.label}}
+                {{@documentContainer.type.altLabel}}
               </span>
             </div>
             <LinkTo
