--- a/app/components/publications/documents/document-card-step.hbs
+++ b/app/components/publications/documents/document-card-step.hbs
@@ -10,7 +10,7 @@
             <Group.Item class="auk-u-maximize-width">
               <div class="auk-o-flex auk-o-flex--vertical-center auk-o-flex--spaced">
                 <span class="auk-overline">
-                  {{@piece.documentContainer.type.label}}
+                  {{@piece.documentContainer.type.altLabel}}
                 </span>
               </div>
               <LinkTo @route="document" @model={{@piece.id}} class="auk-h4">
