--- a/app/templates/signatures.hbs
+++ b/app/templates/signatures.hbs
@@ -16,10 +16,10 @@
       <Group.Item>
         <Auk::Tabs>
           <Auk::Tab @route="signatures.index">
-            {{t "to-sign"}}
+            {{t "to-start-up"}}
           </Auk::Tab>
           <Auk::Tab @route="signatures.ongoing">
-            {{t "ongoing"}}
+            {{t "to-follow-up"}}
           </Auk::Tab>
         </Auk::Tabs>
       </Group.Item>
