--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -4,23 +4,30 @@
       <:top>
         <Toolbar as |Tb|>
           <Tb.Group>
-            <Plugins::History::Undo @controller={{this.controller}}/>
-            <Plugins::History::Redo @controller={{this.controller}}/>
+            <Plugins::History::Undo @controller={{this.controller}} />
+            <Plugins::History::Redo @controller={{this.controller}} />
           </Tb.Group>
           <Tb.Group>
-            <Plugins::TextStyle::Bold @controller={{this.controller}}/>
-            <Plugins::TextStyle::Italic @controller={{this.controller}}/>
-            <Plugins::TextStyle::Strikethrough @controller={{this.controller}}/>
-            <Plugins::TextStyle::Underline @controller={{this.controller}}/>
-            <Plugins::TextStyle::Subscript @controller={{this.controller}}/>
-            <Plugins::TextStyle::Superscript @controller={{this.controller}}/>
+            <Plugins::Heading::HeadingMenu @controller={{this.controller}} />
           </Tb.Group>
           <Tb.Group>
-            <Plugins::List::Unordered @controller={{this.controller}}/>
-            <Plugins::List::IndentationControls @controller={{this.controller}}/>
+            <Plugins::TextStyle::Bold @controller={{this.controller}} />
+            <Plugins::TextStyle::Italic @controller={{this.controller}} />
+            <Plugins::TextStyle::Strikethrough
+              @controller={{this.controller}}
+            />
+            <Plugins::TextStyle::Underline @controller={{this.controller}} />
+            <Plugins::TextStyle::Subscript @controller={{this.controller}} />
+            <Plugins::TextStyle::Superscript @controller={{this.controller}} />
           </Tb.Group>
           <Tb.Group>
-              <Plugins::Table::TableMenu @controller={{this.controller}}/>
+            <Plugins::List::Unordered @controller={{this.controller}} />
+            <Plugins::List::IndentationControls
+              @controller={{this.controller}}
+            />
+          </Tb.Group>
+          <Tb.Group>
+            <Plugins::Table::TableMenu @controller={{this.controller}} />
           </Tb.Group>
         </Toolbar>
       </:top>
@@ -31,7 +38,7 @@
           @plugins={{this.plugins}}
         />
       </:default>
-  </EditorContainer>
+    </EditorContainer>
   {{else}}
     <Auk::Alert
       @skin="warning"
