--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -109,7 +109,7 @@
               />
             {{/unless}}
           </Group.Item>
-          {{#if this.signaturesEnabled}}
+          {{#if this.showSignaturePill}}
               {{#if this.loadSignatureRelatedData.isRunning}}
                 <Group.Item>
                   <div class="auk-loader au-u-margin-left-small" role="alert" aria-busy="true"></div>
