KAS-4099 implement removing sign-flow data from signature tab

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -2,10 +2,22 @@
   {{#if this.loadSignatureRelatedData.isRunning}}
     <Auk::Loader />
   {{else if this.signMarkingActivity}}
-    <SignaturePill
-      @piece={{@piece}}
-      @signMarkingActivity={{this.signMarkingActivity}}
-    />
+    <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+      <SignaturePill
+        @piece={{@piece}}
+        @signMarkingActivity={{this.signMarkingActivity}}
+      />
+      {{#if (user-may "remove-signatures")}}
+        <AuButton
+          @skin="naked"
+          @alert={{true}}
+          @icon="trash"
+          {{on "click" (toggle "isOpenVerifyDeleteSignFlow" this)}}
+        >
+          {{t "delete-all-sign-flow-data"}}
+        </AuButton>
+      {{/if}}
+    </div>
   {{else if this.agendaitem}}
     {{#if this.loadCanManageSignFlow.isRunning}}
       <Auk::Loader />
@@ -53,3 +65,19 @@
     </AuAlert>
   {{/if}}
 </div>
+
+{{#if this.isOpenVerifyDeleteSignFlow}}
+  {{!-- TODO: vl-refactor --}}
+  {{!-- We can't use AuModal here because said modals get rendered inside a
+        "wormhole" div. The current component is also part of a modal which gets
+        rendered in the same "wormhole", so opening another AuModal here will
+        overwrite the existing page content, and break the route. If AuModals
+        ever support rendering multiple modals over each other, we can use one
+        here, otherwise we might want to make the doc view not be a modal. --}}
+  <WebComponents::VlModalVerify
+    @title={{t "delete-all-sign-flow-data"}}
+    @message={{t "verify-delete-all-sign-flow-data"}}
+    @onCancel={{toggle "isOpenVerifyDeleteSignFlow" this}}
+    @onVerify={{this.verifyDeleteSignFlow}}
+  />
+{{/if}}
