--- a/app/components/publications/documents/document-card-step.hbs
+++ b/app/components/publications/documents/document-card-step.hbs
@@ -45,18 +45,18 @@
               {{/if}}
             </Group.Item>
           </Toolbar.Group>
+      {{#if this.signaturesEnabled}}
         <Toolbar.Group @position="right" as |Group|>
           <Group.Item class="auk-o-flex">
-              {{#if this.signMarkingActivity}}
                 <Group.Item>
                   <SignaturePill
                     @piece={{@piece}}
                     @signMarkingActivity={{this.signMarkingActivity}}
                   />
                 </Group.Item>
-              {{/if}}
           </Group.Item>
         </Toolbar.Group>
+      {{/if}}
         </Auk::Toolbar>
       </div>
     </div>
