--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -401,8 +401,14 @@ table tr.lt-expanded-row {
   };
 }
 
+// Text ellipsis helper
 .auk-u-text-ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+// Loadable content
+.auk-loadable-content__content {
+  min-width: 0;
 }
