--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -32,7 +32,9 @@
               {{#if this.loadFiles.isRunning}}
                 <AuLoader @padding="small"/>
               {{else}}
-                {{this.piece.name}}.{{this.extension}}
+                {{#let (or this.piece.file.derived.extension this.piece.file.extension) as |extension|}}
+                  {{this.piece.name}}{{#if extension}}.{{extension}}{{/if}}
+                {{/let}}
               {{/if}}
             </LinkTo>
             <div class="vlc-document-card-content__meta">
