fix no mandatees are showing in document signature tab on load

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -18,7 +18,7 @@
       <h5 class="auk-h4">{{@piece.name}}</h5>
       <Signatures::CreateSignFlow
         @piece={{@piece}}
-        @decisionActivity={{this.decisionActivity}}
+        @decisionActivities={{array this.decisionActivity}}
         @onChangeSigners={{fn (mut this.signers)}}
         @onChangeApprovers={{fn (mut this.approvers)}}
         @onChangeNotificationAddresses={{fn (mut this.notificationAddresses)}}
