--- a/app/components/web-components/vl-modal-verify.hbs
+++ b/app/components/web-components/vl-modal-verify.hbs
@@ -6,7 +6,7 @@
   {{! template-lint-disable no-down-event-binding}}
   {{on "keydown" this.keyDown}}
 >
-  <div class="auk-modal auk-modal--small" role="dialog">
+  <div class="auk-modal auk-modal--medium" role="dialog">
     <div class="auk-modal__push"></div>
     <div class="auk-modal__content">
       <div class="auk-modal__header auk-modal__header--bordered">
