KAS-4099 add tooltip to sign flow delete button

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -15,6 +15,9 @@
           {{on "click" (toggle "isOpenVerifyDeleteSignFlow" this)}}
         >
           {{t "delete-all-sign-flow-data"}}
+          <EmberTooltip @side="bottom" @tooltipClass="tooltip-custom">
+            {{t "delete-all-sign-flow-tooltip"}}
+          </EmberTooltip>
         </AuButton>
       {{/if}}
     </div>
