feat: add minutes versioning

--- a/app/components/say-editor.hbs
+++ b/app/components/say-editor.hbs
@@ -26,6 +26,7 @@
             @timestampKey={{@versioningTimestampKey}}
             @previousVersionKey={{@versioningPreviousTimestampKey}}
             @onVersionClicked={{this.revertToVersion}}
+            @previousVersionKey={{@versioningPreviousVersionKey}}
           />
         {{/if}}
       </div>
