feat: disable save if no changes or empty

--- a/app/templates/agenda/minutes.hbs
+++ b/app/templates/agenda/minutes.hbs
@@ -233,6 +233,7 @@
                   <AuButton
                     @skin="primary"
                     @loading={{this.saveMinutes.isRunning}}
+                    @disabled={{this.saveDisabled}}
                     {{on "click" (perform this.saveMinutes)}}
                   >
                     {{t "save"}}
